kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cnj-hello-backend-nodejs
  name: cnj-hello-backend-nodejs-service
  namespace: cxp-team-cloudbirds
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: cnj-hello-backend-nodejs
  sessionAffinity: None
